# Arduraco

./: .directory  .gitignore  README.md
ArduracoForArduino/0.x/: .directory
ArduracoForArduino/0.x/0.1/: .directory  ArduracoForArduino.ino
ArduracoForArduino/0.x/0.2/: .directory  ArduracoForArduino.ino
ArduracoForArduino/0.x/0.3/: .directory  ArduracoForArduino.ino
ArduracoForArduino/libraries/XpressNet/: XpressNet.cpp  XpressNet.h
ArduracoForPC/: .directory
ArduracoForPC/ArduracoCLI/: .directory  .gitignore  .main.cpp.kate-swp  ArduracoCLI.kdev4  CMakeLists.txt  befehl.cpp  befehl.h  befehlsgruppe.cpp  befehlsgruppe.h  main.cpp
ArduracoForPC/ArduracoCLI/.kdev4/: ArduracoCLI.kdev4
ArduracoForPC/ArduracoCLI/datenstruktur/: .directory  CMakeLists.txt  gleis.cpp  gleis.h  gleissystem.cpp  gleissystem.h  licht.cpp  licht.h  reed.cpp  reed.h  zug.cpp  zug.h
ArduracoForPC/ArduracoCLI/menuefunktionen/: .directory  CMakeLists.txt  gleissteuerung.cpp  gleissteuerung.h  lichtsteuerung.cpp  lichtsteuerung.h  zugsteuerung.cpp  zugsteuerung.h
tests/ArduCom/: Test  main.cpp
